Added additional functions to save and upload markdown files. Also edited some code and added enpoints to swagger
