# simple-blog-backend/main.go
@@ -17,7 +17,13 @@ func main() {
 
 	r.HandleFunc("/api/test", hfunc.SendTestData).Methods("GET")
 	r.HandleFunc("/api/rec", hfunc.GetTestData).Methods("POST")
+
+	// Markdown Endpoints
+
+	// Enpoint to transform a markdown file to a html output
 	r.HandleFunc("/api/mdtohtml", hfunc.SendMdToHTML).Methods("POST")
+	r.HandleFunc("/api/savemd", hfunc.SaveMd).Methods("POST")
+	r.HandleFunc("/api/uploadmd/{fileName}", hfunc.UploadMarkdownFile).Methods("GET")
 
 	log.Fatal(http.ListenAndServe(":8000", r))
 }
